tests/ui/from-to-repr-non-explicit.stderr
error: `ToRepr` derive requires explicit `repr(Int)`
  --> tests/ui/from-to-repr-non-explicit.rs:20:10
   |
20 | #[derive(ToRepr)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `ToRepr` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `FromRepr` derive requires explicit `repr(Int)`
  --> tests/ui/from-to-repr-non-explicit.rs:27:10
   |
27 | #[derive(FromRepr)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromRepr` (in Nightly builds, run with -Z macro-backtrace for more info)
